(Mobile) fixed bug - dropdown menu not showing on catalog

--- a/motors-easy/src/main/resources/static/estilo/responsividade.css
+++ b/motors-easy/src/main/resources/static/estilo/responsividade.css
@@ -20,7 +20,6 @@ main{
 }
 
 #main-catalogo{
-    position: relative;
 }
 
 
