--- a/motors-easy/src/main/resources/static/estilo/splash.css
+++ b/motors-easy/src/main/resources/static/estilo/splash.css
@@ -147,6 +147,9 @@ main{
 
 #main-catalogo{
     min-height: 90%;
+
+    position: relative;
+    overflow: hidden;
 }
 
 #main-registro{
